[package]
name = "deconz-intouch2-simple"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intouch2 = { path = "../intouch2" }
#nom = "5.0.1"
#palette = "0.4.1"
#rand = "0.7"
#reqwest = "0.9"
#serde_json = "1.0"
#num-traits = "0.2"
#num-derive = "0.3"
