[package]
name = "deconz-intouch2-simple"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["macros"] }
intouch2 = { path = "../intouch2" }
palette = "0.6"
rand = "0.8"
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["tokio-rustls", "rustls-tls"] }
