[package]
name = "intouch2-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34", features = ["macros", "rt-multi-thread", "net", "fs", "time", "sync", "io-util"] }
intouch2 = { path = "../intouch2" }
clap = { version = "4.4", features = ["derive", "env"] }
rand = "0.8"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
half = "2.3.1"
strum = { version = "0.25", features = ["derive"] }
mqttrs = { version = "0.4.1", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
