[package]
name = "intouch2-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["env_logger"]
log = ["tracing/log", "dep:log"]
env_logger = ["dep:env_logger", "log"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
env_logger = { version = "0.11", optional = true, default-features = false, features = ["auto-color", "humantime"] }
intouch2 = { path = "../intouch2" }
mqttrs = { version = "0.4.1", features = ["derive"] }
log = { version = "0.4", optional = true, features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread", "net", "fs", "time", "sync", "io-util"] }
tracing = "0.1"
