[package]
name = "intouch2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
serde_json = "1.0"
num-traits = "0.2"
num-derive = "0.3"
strum = { version = "0.25", features = ["derive"] }
rand = "0.8"
thiserror = "1.0"
