[package]
name = "intouch2"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serialize"]
serialize = ["serde/derive"]

[dependencies]
disjoint_impls = "1.3.6"
nom = "7.1"
num-derive = "0.3"
num-traits = "0.2"
rand.workspace = true
serde = { workspace = true, optional = true }
strum.workspace = true
thiserror.workspace = true
